# templates_unmanaged_project

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  LICENSE  README.md  project_name.hpp
docs/: index.html
docs/html/: index.html
docs/source/: index.md
docs/wiki/: index.wiki
docs/wiki_html/: index.html
include/: project_name_interfaces.h
source/: main.cpp
src/: CMakeLists.txt  project_name.cpp  project_name.h
test/: CMakeLists.txt  fuzzy_test.cpp  test.cpp
